Unset global share context pointer on deletion

Fixes: QTBUG-76828
Change-Id: I43eae3c04a23abe118f51c69742772ddb38646f0
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>